--- a/trunk/Source/Shellma/App.config
+++ b/trunk/Source/Shellma/App.config
@@ -8,19 +8,20 @@
     <!--WCF-->
     <system.serviceModel>
         <services>
-            <service name="Infotecs.Shellma.ServiceProvider" behaviorConfiguration="ShellmaServiceBehavior">
-                <endpoint address="http://localhost:5030/shellma"
-                          binding="webHttpBinding"
-                          bindingConfiguration="ShellmaServiceBinding"
-                          contract="Infotecs.ShellmaContracts.ServiceContracts.IShellmaServiceProvider" />
-            </service>
+            <!--            <service name="Infotecs.Shellma.ServiceProvider" behaviorConfiguration="ShellmaServiceBehavior">-->
+            <!--                <endpoint address="http://localhost:5030/shellma"-->
+            <!--                          binding="webHttpBinding"-->
+            <!--                          bindingConfiguration="ShellmaServiceBinding"-->
+            <!--                          contract="Infotecs.Shellma.IShellmaServiceProvider" />-->
+            <!--            </service>-->
         </services>
         <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
         <behaviors>
             <serviceBehaviors>
                 <behavior name="ShellmaServiceBehavior">
                     <serviceDebug includeExceptionDetailInFaults="true" />
-                    <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="500" maxConcurrentInstances="1000" />
+                    <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="500"
+                                       maxConcurrentInstances="1000" />
                 </behavior>
             </serviceBehaviors>
         </behaviors>
