--- a/trunk/Source/Shellma/Shellma.csproj
+++ b/trunk/Source/Shellma/Shellma.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cors\CorsConstants.cs" />
+    <Compile Include="Cors\CorsEnabledAttribute.cs" />
+    <Compile Include="Cors\CorsEnabledMessageInspector.cs" />
+    <Compile Include="Cors\CorsEnabledServiceHost.cs" />
+    <Compile Include="Cors\EnableCorsEndpointBehavior.cs" />
+    <Compile Include="Cors\PreflightOperationBehavior.cs" />
+    <Compile Include="Cors\PreflightOperationInvoker.cs" />
+    <Compile Include="IShellmaServiceProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceProvider.cs" />
