+ Settings Вынесен адрес Shellma в настройки

--- a/trunk/Source/Shellma/App.config
+++ b/trunk/Source/Shellma/App.config
@@ -3,38 +3,10 @@
 <configuration>
     <configSections>
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Infotecs.Shellma.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
-
-    <!--WCF-->
-    <system.serviceModel>
-        <services>
-            <!--            <service name="Infotecs.Shellma.ServiceProvider" behaviorConfiguration="ShellmaServiceBehavior">-->
-            <!--                <endpoint address="http://localhost:5030/shellma"-->
-            <!--                          binding="webHttpBinding"-->
-            <!--                          bindingConfiguration="ShellmaServiceBinding"-->
-            <!--                          contract="Infotecs.Shellma.IShellmaServiceProvider" />-->
-            <!--            </service>-->
-        </services>
-        <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
-        <behaviors>
-            <serviceBehaviors>
-                <behavior name="ShellmaServiceBehavior">
-                    <serviceDebug includeExceptionDetailInFaults="true" />
-                    <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="500"
-                                       maxConcurrentInstances="1000" />
-                </behavior>
-            </serviceBehaviors>
-        </behaviors>
-        <bindings>
-            <webHttpBinding>
-                <binding name="ShellmaServiceBinding" closeTimeout="00:10:00" sendTimeout="00:10:00">
-                    <security mode="None">
-                        <transport clientCredentialType="None" />
-                    </security>
-                </binding>
-            </webHttpBinding>
-        </bindings>
-    </system.serviceModel>
 
     <!--NLog-->
     <!--Log Path example C:\ProgramData\InfoTeCS\PKI\Shellma\Logs-->
@@ -67,4 +39,11 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <Infotecs.Shellma.Properties.Settings>
+            <setting name="ServiceAddress" serializeAs="String">
+                <value>http://localhost:5030/shellma</value>
+            </setting>
+        </Infotecs.Shellma.Properties.Settings>
+    </applicationSettings>
 </configuration>
