--- a/trunk/Source/UnitTests/UnitTests.csproj
+++ b/trunk/Source/UnitTests/UnitTests.csproj
@@ -52,6 +52,9 @@
     <None Include="DataStore\TestContainer">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="DataStore\UnitTestContainer">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +62,11 @@
       <Project>{662B6B80-6A83-44E3-8DA7-3033F8BF96EE}</Project>
       <Name>Cryptography</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataStore\EtalonSignature.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
