--- a/trunk/Source/Shellma/Shellma.csproj
+++ b/trunk/Source/Shellma/Shellma.csproj
@@ -73,6 +73,9 @@
     <None Include="DataStore\TestContainer">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="DataStore\UnitTestContainer">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
