--- a/trunk/Source/ShellmaContracts/ShellmaContracts.csproj
+++ b/trunk/Source/ShellmaContracts/ShellmaContracts.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContracts\VerifySignatureRequest.cs" />
+    <Compile Include="DataContracts\VerifySignatureCertRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
